Fixed Overflow. Added 'Ultimele plangeri' section

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -32,6 +32,7 @@
     border-radius: 5px;
     margin-top: 5%;
     margin-bottom: 5%;
+
 }
 
 #social{
@@ -168,4 +169,29 @@
 
 .modal-title{
     background-color: #92E3A9;
+}
+
+.plangereUP{
+    margin-left: 33%;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.plangereDOWN{
+    margin-left: 33%;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left; 
+    color: #92E3A9;   
+}
+
+body{
+    overflow-x: hidden;
 }
